Document how to style columns. Stop auto aligning

--- a/src/docs/docStyles.scss
+++ b/src/docs/docStyles.scss
@@ -1,6 +1,11 @@
-
 img.feature {
   max-width: 100%;
   margin: 0 auto;
   display: block;
+}
+
+#custom-table {
+  [data-field='Net worth (in billions)'] {
+    text-align: right;
+  }
 }
